Current

Fixed: GITHUB-107: Allow enum values without converting them to uppercase.

1.30
2012/10/27

Added: JCommander#acceptUnknownOption and JCommander#getUnknownArgs
Added: JCommander#allowAbbreviatedOptions (default: false)
Added: JCommander#setCaseSensitiveOptions (default: true)
Added: Support for enums (Scott M Stark)
Fixed: Missing new lines in usage (styurin)
Fixed: The description of commands is now displayed on the next line and indented.

1.29
2012/07/28

Fixed: Empty string defaults now displayed as "<empty string>" in the usage
Fixed: Bugs with the PositiveInteger validator
Fixed: Parameters with a single double quote were not working properly

1.27
2012/07/05

Added: IValueValidator to validate parameter values (typed) as opposed to IParameterValidator which validates strings
Added: echoInput, used when password=true to echo the characters (Jason Wheeler)
Added: @Parameter(help = true)
Fixed: wasn't handling parameters that start with " but don't end with one correctly
Fixed: if using a different option prefix, unknown option are mistakenly reported as "no main parameter defined" (kurmasz)
Fixed: 113: getCommandDescription() returns the description of the main parameter instead of that of the command
Fixed: bug with several multiple arity parameters (VariableArityTest)
Fixed: variable arities not working when same parameter appears multiple times.

1.25
2012/04/26

Added: Default passwords are no longer displayed in the usage (Paul Mendelson)
Added: Variable arities now work magically, no need for IVariableArity any more
Fixed: Commands using @Parameters(resourceBundle) were not i18n'ed properly in the usage()
Fixed: StringIndexOutOfBoundsException if passing an empty parameter (bomanz)
Fixed: GITHUB-105: If no description is given for an enum, use that enum's value (Adrian Muraru)
Fixed: GITHUB-108: Dynamic parameters with "=" in them are not parsed correctly (szhem)
Fixed: Commands with same prefix as options were not working properly.